--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -82,4 +82,5 @@
     <string name="preference_title_restore">Восстановить</string>
     <string name="preference_summary_backup_json">Поддерживает восстановление заметок из резервной копии.</string>
     <string name="preference_summary_backup_dropbox">Копирование в папку приложения.</string>
+    <string name="backup_message_finishing">Завершение…</string>
 </resources>
