--- a/res/values-ru-rBY/strings.xml
+++ b/res/values-ru-rBY/strings.xml
@@ -83,4 +83,5 @@
     <string name="preference_summary_backup_dropbox">Капіраванне ў дырэкторыю прыкладання.</string>
     <string name="backup_message_finishing">Завяршэнне…</string>
     <string name="backup_message_restoring">Аднаўленне з рэзервовай копіі…</string>
+    <string name="toast_restore_finished">Адноўлена %1$d нататак.</string>
 </resources>
