--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,7 +47,7 @@
     <string name="prefkey_substitution_table">substitution_table</string>
     <string name="settings">Settings</string>
     <string name="toast_cancelled">Cancelled.</string>
-    <string name="toast_backup_finished">%1$d notes are exported to %2$s</string>
+    <string name="toast_backup_finished">%1$d notes are saved to %2$s</string>
     <string name="toast_backup_nothing">Nothing to backup.</string>
     <string name="toast_note_drafted">Marked as a draft.</string>
     <string name="toast_note_undrafted">Marked as not a draft.</string>
@@ -97,4 +97,5 @@
     <string name="preference_summary_backup_dropbox">Backup your notes into Dropbox application folder.</string>
     <string name="backup_message_finishing">Finishing…</string>
     <string name="backup_message_restoring">Restoring backup…</string>
+    <string name="toast_restore_finished">%1$d notes are restored.</string>
 </resources>
