--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -84,4 +84,5 @@
     <string name="backup_message_finishing">Завершение…</string>
     <string name="backup_message_restoring">Восстановление из резервной копии…</string>
     <string name="toast_restore_finished">Восстановлено %1$d заметок.</string>
+    <string name="preference_summary_restore_dropbox">Восстановить из папки приложения.</string>
 </resources>
