--- a/res/values-ru-rBY/strings.xml
+++ b/res/values-ru-rBY/strings.xml
@@ -85,4 +85,6 @@
     <string name="backup_message_restoring">Аднаўленне з рэзервовай копіі…</string>
     <string name="toast_restore_finished">Адноўлена %1$d нататак.</string>
     <string name="preference_summary_restore_dropbox">Аднавіць з дырэкторыі прыкладання.</string>
+    <string name="toast_restore_not_found">Backup is not found.</string>
+    <string name="preference_summary_restore_json">Restore from previously created JSON backup.</string>
 </resources>
