--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -84,4 +84,6 @@
     <string name="preference_summary_restore_dropbox">Аднавіць з дырэкторыі прыкладання.</string>
     <string name="toast_restore_not_found">Backup is not found.</string>
     <string name="preference_summary_restore_json">Аднавіць з раней створанай копіі.</string>
+    <string name="drawer_sign_in">Увайсці</string>
+    <string name="drawer_basic_account">Базавы акаўнт</string>
 </resources>
