--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -112,4 +112,5 @@
     <string name="auth_sign_in_button">Sign In</string>
     <string name="auth_sign_up_button">Sign Up</string>
     <string name="account_auth_success">Successfully signed in.</string>
+    <string name="note_share">Share</string>
 </resources>
