--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="dialog_replacement_table_title">Replacement Table</string>
     <string name="drawer_close">Close</string>
     <string name="drawer_item_drafts">Drafts</string>
-    <string name="drawer_item_feed">Feed</string>
+    <string name="drawer_item_diary">Diary</string>
     <string name="drawer_item_starred">Starred</string>
     <string name="drawer_open">Open</string>
     <string name="backup_message_creating">Creating backup…</string>
