--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -14,7 +14,7 @@
     <string name="drawer_open">Открыть</string>
     <string name="backup_message_creating">Создание резервной копии…</string>
     <string name="backup_message_starting">Запуск…</string>
-    <string name="feed_empty">Коснитесь «Новая заметка», чтобы написать заметку.</string>
+    <string name="feed_empty">Написать заметку</string>
     <string name="note_color">Изменить цвет</string>
     <string name="note_draft">Переместить в черновики</string>
     <string name="note_hint">Текст</string>
