--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="note_hint">Text</string>
     <string name="note_new">New note</string>
     <string name="note_not_draft">Mark as not a draft</string>
+    <string name="note_moved_to_draft">Note moved to Drafts.</string>
+    <string name="note_added_to_draft">Note added to Drafts.</string>
     <string name="note_remove">Remove note</string>
     <string name="note_removed">The note is removed.</string>
     <string name="note_star">Star</string>
