--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -100,4 +100,5 @@
     <string name="feed_change_sorting_order">Изменить порядок сортировки</string>
     <string name="feed_set_descending">От новых к старым.</string>
     <string name="feed_set_ascending">От старых к новым.</string>
+    <string name="feedback">Feedback</string>
 </resources>
