--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -118,4 +118,5 @@
     <string name="feed_change_sorting_order">Change sorting order</string>
     <string name="feed_set_descending">Newest first.</string>
     <string name="feed_set_ascending">Oldest first.</string>
+    <string name="feedback">Feedback</string>
 </resources>
