--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,104 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="account_auth_failed">Не удалось выполнить вход. Проверьте правильность ввода данных.</string>
+    <string name="account_auth_success">Вход выполнен успешно.</string>
+    <string name="activity_authenticator">Войти</string>
+    <string name="activity_feedback">Отправить отзыв</string>
     <string name="activity_note">Заметка</string>
+    <string name="activity_pin">Код доступа</string>
     <string name="activity_settings">Настройки</string>
+    <string name="app_subname">Личный дневник</string>
+    <string name="auth_sign_in_button">Войти</string>
+    <string name="auth_sign_up_button">Создать учетную запись</string>
+    <string name="backup_message_creating">Создание резервной копии…</string>
+    <string name="backup_message_finishing">Завершение…</string>
+    <string name="backup_message_restoring">Восстановление из резервной копии…</string>
+    <string name="backup_message_starting">Запуск…</string>
     <string name="button_remove">Удалить</string>
     <string name="dialog_colorpicker_title">Цвет</string>
+    <string name="dialog_current_pin_title">Текущий код доступа</string>
+    <string name="dialog_custom_date_title">Изменить дату и время</string>
+    <string name="dialog_new_pin_title">Новый код доступа</string>
+    <string name="dialog_pin_hint">4 цифры</string>
+    <string name="dialog_reminder_days_title">Дни недели</string>
+    <string name="dialog_reminder_friday">Пятница</string>
+    <string name="dialog_reminder_monday">Понедельник</string>
+    <string name="dialog_reminder_saturday">Суббота</string>
+    <string name="dialog_reminder_sunday">Воскресенье</string>
+    <string name="dialog_reminder_thursday">Четверг</string>
+    <string name="dialog_reminder_time_title">Время</string>
+    <string name="dialog_reminder_tuesday">Вторник</string>
+    <string name="dialog_reminder_wednesday">Среда</string>
     <string name="dialog_remove_note_message">Удаленную заметку нельзя восстановить.</string>
     <string name="dialog_remove_note_title">Удалить заметку?</string>
     <string name="dialog_replacement_table_title">Таблица замены</string>
+    <string name="drawer_basic_account">Базовый аккаунт</string>
     <string name="drawer_close">Закрыть</string>
-    <string name="drawer_item_drafts">Черновики</string>
     <string name="drawer_item_diary">Дневник</string>
+    <string name="drawer_item_drafts">Черновики</string>
     <string name="drawer_item_starred">Отмеченные</string>
     <string name="drawer_open">Открыть</string>
-    <string name="backup_message_creating">Создание резервной копии…</string>
-    <string name="backup_message_starting">Запуск…</string>
+    <string name="drawer_sign_in">Войти</string>
+    <string name="feed_change_sorting_order">Изменить порядок сортировки</string>
     <string name="feed_empty">Написать заметку</string>
+    <string name="feed_set_ascending">От старых к новым.</string>
+    <string name="feed_set_descending">От новых к старым.</string>
+    <string name="helper_optional">Необязательно</string>
+    <string name="note_added_to_draft">Заметка добавлена в Черновики.</string>
     <string name="note_color">Изменить цвет</string>
     <string name="note_draft">Переместить в черновики</string>
+    <string name="note_fullscreen">На весь экран</string>
     <string name="note_hint">Текст</string>
+    <string name="note_moved_to_draft">Заметка перемещена в Черновики.</string>
     <string name="note_new">Новая заметка</string>
     <string name="note_not_draft">Переместить в ленту</string>
-    <string name="note_moved_to_draft">Заметка перемещена в Черновики.</string>
-    <string name="note_added_to_draft">Заметка добавлена в Черновики.</string>
     <string name="note_remove">Удалить заметку</string>
     <string name="note_removed">Заметка удалена.</string>
+    <string name="note_reset_custom_date">Сбросить</string>
+    <string name="note_set_custom_date">Изменить дату и время</string>
+    <string name="note_share">Поделиться</string>
     <string name="note_star">Отметить</string>
     <string name="note_title_hint">Заголовок</string>
     <string name="note_unstar">Снять отметку</string>
+    <string name="notification_reminder_content_text">Время что-нибудь написать.</string>
+    <string name="password_hint">Пароль</string>
+    <string name="pin_disabled">Защита отключена.</string>
+    <string name="pin_enabled">Включена защита с помощью кода доступа.</string>
+    <string name="pin_incorrect">Неверный код доступа.</string>
+    <string name="pin_required">Код доступа</string>
+    <string name="pin_too_short">Код доступа слишком короткий.</string>
+    <string name="prefcat_title_backup_and_restore">Резервное копирование</string>
     <string name="prefcat_title_reminder">Напоминания</string>
     <string name="prefcat_title_security">Безопасность</string>
     <string name="prefcat_title_substitution">Автоматическая замена</string>
+    <string name="preference_summary_backup">Сохранить заметки в файл или облако.</string>
+    <string name="preference_summary_backup_dropbox">Копирование в папку приложения.</string>
+    <string name="preference_summary_backup_json">Поддерживает восстановление заметок из резервной копии.</string>
+    <string name="preference_summary_backup_plain_text">Можно открыть любым текстовым редактором.</string>
     <string name="preference_summary_pin">Приложение будет запрашивать код доступа через 5 минут после выхода.</string>
+    <string name="preference_summary_reminder_never">Никогда</string>
+    <string name="preference_summary_restore">Восстановить заметки из резервной копии.</string>
+    <string name="preference_summary_restore_dropbox">Восстановить из папки приложения.</string>
+    <string name="preference_summary_restore_json">Восстановить из ранее созданной копии.</string>
     <string name="preference_summary_substitution">Автоматически заменять последовательности символов.</string>
+    <string name="preference_title_backup">Сохранить копию</string>
+    <string name="preference_title_backup_plain_text">Текстовый файл</string>
     <string name="preference_title_enabled">Включить</string>
+    <string name="preference_title_pin">Установить код доступа</string>
     <string name="preference_title_reminder_days">Дни недели</string>
     <string name="preference_title_reminder_time">Время</string>
-    <string name="preference_title_pin">Установить код доступа</string>
+    <string name="preference_title_restore">Восстановить</string>
     <string name="preference_title_substitution_table">Таблица замены</string>
+    <string name="send">Отправить</string>
     <string name="settings">Настройки</string>
-    <string name="toast_cancelled">Отменено.</string>
     <string name="toast_backup_finished">%1$d заметок сохранены в %2$s</string>
     <string name="toast_backup_nothing">Нет заметок.</string>
+    <string name="toast_cancelled">Отменено.</string>
+    <string name="toast_email_required">Не заполнен адрес электронной почты.</string>
     <string name="toast_note_drafted">Заметка перемещена в черновики.</string>
     <string name="toast_note_undrafted">Заметка перемещена в ленту.</string>
-    <string name="toast_starred">Добавлена отметка.</string>
-    <string name="toast_unstarred">Отметка снята.</string>
-    <string name="toast_storage_unready">Диск не готов.</string>
-    <string name="activity_pin">Код доступа</string>
-    <string name="pin_required">Код доступа</string>
-    <string name="app_subname">Личный дневник</string>
-    <string name="pin_incorrect">Неверный код доступа.</string>
-    <string name="dialog_current_pin_title">Текущий код доступа</string>
-    <string name="pin_disabled">Защита отключена.</string>
-    <string name="dialog_new_pin_title">Новый код доступа</string>
-    <string name="pin_too_short">Код доступа слишком короткий.</string>
-    <string name="pin_enabled">Включена защита с помощью кода доступа.</string>
-    <string name="note_set_custom_date">Изменить дату и время</string>
-    <string name="note_reset_custom_date">Сбросить</string>
-    <string name="dialog_custom_date_title">Изменить дату и время</string>
-    <string name="dialog_reminder_days_title">Дни недели</string>
-    <string name="dialog_reminder_monday">Понедельник</string>
-    <string name="dialog_reminder_tuesday">Вторник</string>
-    <string name="dialog_reminder_wednesday">Среда</string>
-    <string name="dialog_reminder_thursday">Четверг</string>
-    <string name="dialog_reminder_friday">Пятница</string>
-    <string name="dialog_reminder_saturday">Суббота</string>
-    <string name="dialog_reminder_sunday">Воскресенье</string>
-    <string name="dialog_reminder_time_title">Время</string>
-    <string name="notification_reminder_content_text">Время что-нибудь написать.</string>
-    <string name="preference_summary_reminder_never">Никогда</string>
-    <string name="dialog_pin_hint">4 цифры</string>
-    <string name="note_fullscreen">На весь экран</string>
-    <string name="preference_summary_backup">Сохранить заметки в файл или облако.</string>
-    <string name="preference_summary_restore">Восстановить заметки из резервной копии.</string>
-    <string name="preference_title_backup_plain_text">Текстовый файл</string>
-    <string name="preference_summary_backup_plain_text">Можно открыть любым текстовым редактором.</string>
-    <string name="prefcat_title_backup_and_restore">Резервное копирование</string>
-    <string name="preference_title_backup">Сохранить копию</string>
-    <string name="preference_title_restore">Восстановить</string>
-    <string name="preference_summary_backup_json">Поддерживает восстановление заметок из резервной копии.</string>
-    <string name="preference_summary_backup_dropbox">Копирование в папку приложения.</string>
-    <string name="backup_message_finishing">Завершение…</string>
-    <string name="backup_message_restoring">Восстановление из резервной копии…</string>
-    <string name="toast_restore_finished">Восстановлено %1$d заметок.</string>
-    <string name="preference_summary_restore_dropbox">Восстановить из папки приложения.</string>
-    <string name="toast_restore_not_found">Backup is not found.</string>
-    <string name="preference_summary_restore_json">Восстановить из ранее созданной копии.</string>
-    <string name="drawer_sign_in">Войти</string>
-    <string name="drawer_basic_account">Базовый аккаунт</string>
-    <string name="activity_authenticator">Войти</string>
-    <string name="password_hint">Пароль</string>
-    <string name="toast_email_required">Не заполнен адрес электронной почты.</string>
     <string name="toast_password_required">Не заполнен пароль.</string>
-    <string name="account_auth_failed">Не удалось выполнить вход. Проверьте правильность ввода данных.</string>
-    <string name="auth_sign_in_button">Войти</string>
-    <string name="auth_sign_up_button">Создать учетную запись</string>
-    <string name="account_auth_success">Вход выполнен успешно.</string>
-    <string name="note_share">Поделиться</string>
-    <string name="feed_change_sorting_order">Изменить порядок сортировки</string>
-    <string name="feed_set_descending">От новых к старым.</string>
-    <string name="feed_set_ascending">От старых к новым.</string>
-    <string name="feedback">Feedback</string>
+    <string name="toast_restore_finished">Восстановлено %1$d заметок.</string>
+    <string name="toast_restore_not_found">Backup is not found.</string>
+    <string name="toast_starred">Добавлена отметка.</string>
+    <string name="toast_storage_unready">Диск не готов.</string>
+    <string name="toast_unstarred">Отметка снята.</string>
 </resources>
