--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="about_copyright">© 2014–2015\nPavel Perestoronin, Andrei Menkou</string>
+    <string name="about_facebook">Facebook</string>
+    <string name="about_google_plus">Google+</string>
+    <string name="about_version">Version %1$s\nBuild %2$d</string>
+    <string name="about_vkontakte">VKontakte</string>
     <string name="account_auth_failed">Authentication failed.</string>
     <string name="account_auth_success">Successfully signed in.</string>
+    <string name="activity_about">About</string>
     <string name="activity_authenticator">Sign In</string>
     <string name="activity_feedback">Feedback</string>
     <string name="activity_note">Note</string>
