--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="about_copyright">© 2014–2015\nПавел Пересторонин, Андрей Меньков</string>
     <string name="about_facebook">Фейсбук</string>
-    <string name="about_version">Version %1$s\nBuild %2$d</string>
+    <string name="about_version">Версия %1$s\Сборка %2$d</string>
     <string name="about_vkontakte">ВКонтакте</string>
     <string name="account_auth_failed">Не удалось выполнить вход. Проверьте правильность ввода данных.</string>
     <string name="account_auth_success">Вход выполнен успешно.</string>
