--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,15 +8,15 @@
     <string name="account_auth_failed">Authentication failed.</string>
     <string name="account_auth_success">Successfully signed in.</string>
     <string name="activity_about">About</string>
-    <string name="activity_authenticator">Sign In</string>
+    <string name="activity_authenticator">@string/app_name</string>
     <string name="activity_feedback">Feedback</string>
     <string name="activity_note">Note</string>
     <string name="activity_pin">Passcode Required</string>
     <string name="activity_settings">Settings</string>
     <string name="app_name">Miary</string>
     <string name="app_subname">Personal Diary</string>
-    <string name="auth_sign_in_button">Sign In</string>
-    <string name="auth_sign_up_button">Sign Up</string>
+    <string name="auth_sign_in">Sign In</string>
+    <string name="auth_sign_up">Sign Up</string>
     <string name="backup_message_creating">Creating backup…</string>
     <string name="backup_message_finishing">Finishing…</string>
     <string name="backup_message_restoring">Restoring backup…</string>
