--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -21,6 +21,7 @@
     <string name="backup_message_restoring">Восстановление из резервной копии…</string>
     <string name="backup_message_starting">Запуск…</string>
     <string name="button_remove">Удалить</string>
+    <string name="dialog_authenticating">Вход…</string>
     <string name="dialog_colorpicker_title">Цвет</string>
     <string name="dialog_current_pin_title">Текущий код доступа</string>
     <string name="dialog_custom_date_title">Изменить дату и время</string>
