--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="about_version">Version %1$s\nBuild %2$d</string>
     <string name="about_vkontakte">VKontakte</string>
     <string name="account_auth_failed">Authentication failed. Please check email and password.</string>
+    <string name="account_auth_retry">Please remove existing account in System Settings and try again.</string>
     <string name="account_auth_success">Successfully signed in.</string>
     <string name="account_basic">Basic Account</string>
     <string name="account_offline">Offline Account</string>
